fix: adjust layout and spacing for difficulty selection buttons

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -503,11 +503,13 @@ body {
     2px 4px 12px 0px rgba(209, 202, 198, 0.1) inset;
 }
 
-.huge-icon-button-inside:hover {
-  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15) inset,
-    2px 0px 8px 0px rgba(0, 0, 0, 0.4) inset,
-    0px 2px 4px 0px rgba(0, 0, 0, 0.25) inset,
-    2px 4px 12px 0px rgba(0, 0, 0, 0.1) inset;
+@media (min-width: 768px) {
+  .huge-icon-button-inside:hover {
+    box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15) inset,
+      2px 0px 8px 0px rgba(0, 0, 0, 0.4) inset,
+      0px 2px 4px 0px rgba(0, 0, 0, 0.25) inset,
+      2px 4px 12px 0px rgba(0, 0, 0, 0.1) inset;
+  }
 }
 
 .huge-icon-button-inside:active {
